[project]
name = "comfy-ollama"
version = "0.1.0"
description = "ComfyUI custom nodes for Ollama integration — includes a Prompt Queue node that serves prompts sequentially."
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/fmakila/ComfyOllama"

[tool.comfy]
PublisherId = "fmakila"
DisplayName = "ComfyOllama"
Icon = ""
